// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel-preset-gatsby-package in browser mode specifies proper presets 1`] = `
Array [
  Array [
    "@babel/preset-env",
    Object {
      "bugfixes": false,
      "debug": false,
      "loose": true,
      "modules": "commonjs",
      "shippedProposals": true,
      "targets": Object {
        "browsers": Array [
          "last 2 versions",
          "not ie <= 11",
          "not android 4.4.3",
        ],
      },
      "useBuiltIns": false,
    },
  ],
  Array [
    "@babel/preset-react",
  ],
  "@babel/preset-flow",
]
`;

exports[`babel-preset-gatsby-package in browser mode specifies proper presets for debugging 1`] = `
Array [
  Array [
    "@babel/preset-env",
    Object {
      "bugfixes": false,
      "debug": true,
      "loose": true,
      "modules": "commonjs",
      "shippedProposals": true,
      "targets": Object {
        "browsers": Array [
          "last 2 versions",
          "not ie <= 11",
          "not android 4.4.3",
        ],
      },
      "useBuiltIns": false,
    },
  ],
  Array [
    "@babel/preset-react",
  ],
  "@babel/preset-flow",
]
`;

exports[`babel-preset-gatsby-package in browser mode specifies proper presets for esm 1`] = `
Array [
  Array [
    "@babel/preset-env",
    Object {
      "bugfixes": true,
      "debug": false,
      "loose": true,
      "modules": false,
      "shippedProposals": true,
      "targets": Object {
        "esmodules": true,
      },
      "useBuiltIns": false,
    },
  ],
  Array [
    "@babel/preset-react",
  ],
  "@babel/preset-flow",
]
`;

exports[`babel-preset-gatsby-package in browser mode specifies the proper plugins 1`] = `
Array [
  "@babel/plugin-proposal-nullish-coalescing-operator",
  "@babel/plugin-proposal-optional-chaining",
  "@babel/plugin-transform-runtime",
  "@babel/plugin-syntax-dynamic-import",
  "babel-plugin-dynamic-import-node",
  Array [
    "./babel-transform-compiler-flags",
    Object {
      "availableFlags": Array [
        "GATSBY_MAJOR",
      ],
      "flags": Object {},
    },
  ],
]
`;

exports[`babel-preset-gatsby-package in node mode can enable compilerFlags 1`] = `
Array [
  "@babel/plugin-proposal-nullish-coalescing-operator",
  "@babel/plugin-proposal-optional-chaining",
  "@babel/plugin-transform-runtime",
  "@babel/plugin-syntax-dynamic-import",
  "babel-plugin-dynamic-import-node",
  Array [
    "./babel-transform-compiler-flags",
    Object {
      "availableFlags": Array [
        "MAJOR",
      ],
      "flags": Object {},
    },
  ],
]
`;

exports[`babel-preset-gatsby-package in node mode specifies proper presets 1`] = `
Array [
  Array [
    "@babel/preset-env",
    Object {
      "bugfixes": false,
      "corejs": 3,
      "debug": false,
      "loose": true,
      "modules": "commonjs",
      "shippedProposals": true,
      "targets": Object {
        "node": "12.13.0",
      },
      "useBuiltIns": "entry",
    },
  ],
  Array [
    "@babel/preset-react",
  ],
  "@babel/preset-flow",
]
`;

exports[`babel-preset-gatsby-package in node mode specifies proper presets for debugging 1`] = `
Array [
  Array [
    "@babel/preset-env",
    Object {
      "bugfixes": false,
      "corejs": 3,
      "debug": true,
      "loose": true,
      "modules": "commonjs",
      "shippedProposals": true,
      "targets": Object {
        "node": "12.13.0",
      },
      "useBuiltIns": "entry",
    },
  ],
  Array [
    "@babel/preset-react",
  ],
  "@babel/preset-flow",
]
`;

exports[`babel-preset-gatsby-package in node mode specifies the proper plugins 1`] = `
Array [
  "@babel/plugin-proposal-nullish-coalescing-operator",
  "@babel/plugin-proposal-optional-chaining",
  "@babel/plugin-transform-runtime",
  "@babel/plugin-syntax-dynamic-import",
  "babel-plugin-dynamic-import-node",
  Array [
    "./babel-transform-compiler-flags",
    Object {
      "availableFlags": Array [
        "GATSBY_MAJOR",
      ],
      "flags": Object {},
    },
  ],
]
`;
